<resources>
    <string name="app_name">Finanse</string>
    <string name="name">Nazwa</string>
    <string name="delete">Usuń</string>
    <string name="category">Kategoria</string>
    <string name="price">Cena</string>
    <string name="amount">Ilość</string>
    <string name="add">Dodaj zakup</string>
    <string name="chart">Zobacz wykres</string>
    <string name="history">Zobacz historie zakupów</string>
    <string name="back">Wróć</string>
    <string-array name="categoriesEntries">
        <item>Usługi</item>
        <item>Paliwo</item>
        <item>Elektronika</item>
        <item>Żywność</item>
        <item>Opłaty</item>
    </string-array>
    <string name="addProduct">Dodaj produkt</string>
    <string name="nameHint">Podaj nazwe produktu</string>
    <string name="priceHint">Podaj cene</string>
    <string name="amountHint">Podaj ilość</string>
    <string name="discountHint">Podaj promocje (w %,opcjonalne)</string>
    <string name="categoryHint">Podaj kategorie</string>
    <string name="emailHint">Podaj adres email</string>
    <string name="passwordHint">Podaj haslo</string>
    <string name="login">Zaloguj sie</string>
    <string name="signin">Zarejestruj sie</string>
    <string name="logout">Wyloguj sie</string>
</resources>