<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".historyActivity">
    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:padding="5dp"

        >
        <TableRow>
            <TextView
                android:text="@string/name"
                android:paddingTop="5dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:text="@string/category"
                android:paddingTop="5dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:text="@string/price"
                android:paddingTop="5dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:text="@string/amount"
                android:paddingTop="5dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                />
            <TextView
                android:text="@string/delete"
                android:paddingTop="5dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/backButton"
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>